problem solving day02

--- a/front-end/html_css/htmltest/form.html
+++ b/front-end/html_css/htmltest/form.html
@@ -28,7 +28,7 @@
     <input type="checkbox" name="option" value="2">cucumber<br>
     <input type="checkbox" name="option" value="3">jalapigno<br>
     <input type="checkbox" name="option" value="4">hot chilli<br>
-    <input type="cehckbox" name="option" value="5">barbeque<br>
+    <input type="checkbox" name="option" value="5">barbeque<br>
     <br>
 
     <input type="submit" value="submit">
